AUTOMAKE_OPTIONS = foreign
bin_PROGRAMS = cpa
 
cpa_SOURCES = main.c FileCopy.h FileCopy.c
 
clean-all: 
	@rm config.status configure config.log 
	@rm Makefile 
	@rm -r autom4te.cache/ 
	@rm aclocal.m4 
	@rm compile install-sh missing Makefile.in
	@rm *.o
	@rm cpa
	@rm depcomp
	@rm -r .deps
	@rm /usr/local/bin/cpa
